# xfce4-wmdock-plugin

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.in  configure.in.in
icons/: Makefile.in
icons/48x48/: Makefile.am  Makefile.in
panel-plugin/: Makefile.am  Makefile.in  catchwindow.c  catchwindow.h  debug.c  debug.h  dnd.c  dnd.h  dockapp.c  dockapp.h  extern.h  misc.c  misc.h  props.c  props.h  rcfile.c  rcfile.h  wmdock.c  wmdock.desktop.in.in  wmdock.h  xfce4-wmdock-plugin.xpm
panel-plugin/RCS/: wmdock.c,v
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  eu.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr.po  sv.po  th.po  (+7 more)
